examples/test/testpolicy3488.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3488
  namespace: namespace222
spec:
  podSelector:
    matchLabels:
      key7: value47
      key18: value16
      key3: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value23
      podSelector:
        matchLabels:
          key42: value26
          key23: value1
          key39: value48
